@@ -1,3 +1,9 @@
+2013-07-22  Bill Schmidt  <wschmidt@vnet.linux.ibm.com>
+	    Anton Blanchard <anton@au1.ibm.com>
+
+	* config/rs6000/rs6000.c (rs6000_expand_vector_init): Fix
+	endianness when selecting field to splat.
+
 2013-07-22  Eric Christopher  <echristo@gmail.com>
 
 	* dwarf2out.c (die_odr_checksum): New function to use
